<resources>

    <string name="app_name">Alumni</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="book">Book</string>
    <string name="phone">phone</string>
    <string name="instgram">instgram</string>
    <string name="caption">caption</string>
    <string name="list">List</string>
    <string name="search">search</string>
    <string name="judul">Judul</string>
    <string name="description">Description</string>
    <string name="hari">Hari</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="information">Information</string>
    <string name="tvedit">Edit your task</string>

</resources>
