<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/linearAdd"
    android:gravity="center">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/information"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="32dp"
        android:textStyle="bold"
        android:fontFamily="cursive"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundMode="none"
            >
        <EditText
            android:id="@+id/edt_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="16sp"
            android:hint="Mata Kuliah"
            android:textColor="@color/text_primary"
            />
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundMode="none">
        <EditText
            android:id="@+id/edt_ket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textSize="16sp"
            android:hint="@string/description"
            android:textColor="@color/text_primary"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundMode="none">
        <EditText
            android:id="@+id/edt_Hari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="16sp"
            android:hint="@string/hari"
            android:textColor="@color/text_primary"/>
    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/edt_tgl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:hint="dd/mm/yyyy"
            android:textColor="@color/text_primary"/>
        <View
            android:id="@+id/viewTgl"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/text_primary"
            android:layout_marginTop="2dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/save"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_bottom_sheet"
            android:padding="1dp"
            android:textAllCaps="false"
            android:fontFamily="monospace"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="monospace"
            android:background="@drawable/rounded_bottom_sheet"
            android:backgroundTint="#F44336"
            android:textAllCaps="false"
            android:foregroundTint="@color/colorPrimary"
            android:text="@string/cancel"
            android:padding="0dp"/>
</LinearLayout>